--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
 
         <div class="image1">
-            <img src="/Users/ravneetsingh/Documents/Web Development/SkillVertex/SkillVertex Projects/images/image1.jpg" alt="image1" height="300px" width="400px">
+            <img src="images/image1.jpg" alt="image1" height="300px" width="400px">
         </div>
 
         <h1 class="text">A Creative<br>
