--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="search">
             <input type="text" placeholder="WWW.GMAIL.COM" name="search">
-            <button type="submit"><img src="/Users/ravneetsingh/Documents/Web Development/SkillVertex/SkillVertex Projects/images/search.png"></button>
+            <button type="submit"><img src="images/search.png"></button>
         </div>
 
         <div class="description">
